refactore: /univ -> /univs, lastUpdate nullable
